--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="./portfolio/assets/imgages/covid.png" class="img-fluid" alt="">
+            <img src="./assets/imgages/covid.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Project 1</h4>
               <p>Covid 19 Tracker and Statistics</p>
@@ -60,7 +60,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="./portfolio/assets/imgages/codequiz.png" class="img-fluid" alt="">
+            <img src="/assets/imgages/codequiz.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Homework</h4>
               <p>Code quiz</p>
@@ -71,7 +71,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="portfolio/assets/imgages/weather-app.png" class="img-fluid" alt="">
+            <img src="/assets/imgages/weather-app.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Homework</h4>
               <p>Weather-app</p>
@@ -82,7 +82,7 @@
           </div>
 
        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="portfolio/assets/imgages/Screenshot (563).png" class="img-fluid" alt="">
+            <img src="/assets/imgages/Screenshot (563).png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Project 2</h4>
               <p>Bicycle Shop App</p>
@@ -93,7 +93,7 @@
           </div>
           
        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="portfolio/assets/imgages/burgerapp.png" class="img-fluid" alt="">
+            <img src="/assets/imgages/burgerapp.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Homework</h4>
               <p>Burger App</p>
@@ -104,7 +104,7 @@
           </div>    
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="portfolio/assets/imgages/ems.png" class="img-fluid" alt="">
+            <img src="/assets/imgages/ems.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Homework</h4>
               <p>Employee Generator</p>
