--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="/assets/images/weather-app.png" class="img-fluid" alt="">
+            <img src="./assets/images/weather-app.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Homework</h4>
               <p>Weather-app</p>
@@ -82,7 +82,7 @@
           </div>
 
        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="/assets/images/Screenshot (563).png" class="img-fluid" alt="">
+            <img src="./assets/images/Screenshot (563).png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Project 2</h4>
               <p>Bicycle Shop App</p>
@@ -93,7 +93,7 @@
           </div>
           
        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="/assets/images/burgerapp.png" class="img-fluid" alt="">
+            <img src="./assets/images/burgerapp.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Homework</h4>
               <p>Burger App</p>
@@ -104,7 +104,7 @@
           </div>    
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="/assets/images/ems.png" class="img-fluid" alt="">
+            <img src="./assets/images/ems.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Homework</h4>
               <p>Employee Generator</p>
