--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
           </div>
 
        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="./assets/images/Screenshot (563).png" class="img-fluid" alt="">
+            <img src="./assets/images/bikeshop.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Project 2</h4>
               <p>Bicycle Shop App</p>
