--- a/index.html
+++ b/index.html
@@ -50,9 +50,25 @@
                     <!-- Image and text -->
                     <!--Footer-->
                     <!-- JS, Popper.js, and jQuery -->
-                    <footer class="text-center fixed-bottom bg-secondary text-white border-top border-info">
-                        <p>Adrian Storr<br>&copy; 2020</p>
-                    </footer>
+                    <footer class="text-light bg-dark fixed-bottom">
+    <div class="row text-center">
+      <div class="col-md-12">
+        <p class="m-0">©Copyright, 2020 - Adrian Storr</p>
+        <p class="m-0">
+          <span>E-mail: <a href="mailto:Adrianloves123@gmail.com?subject=Mail from Adrian Storr Web" class="text-warning" target="_blank">adrianloves123@gmail.com</a></span>  
+          <span>Phone: <a href="tel:+19143469077" class="text-warning">+1 (914) 346-9077</a></span> 
+        </p>   
+      </div> 
+    </div>  
+    <div class="row text-center">
+      <nav class="col-md-12">
+        <a href="https://www.facebook.com/Adrian Storr" class="icons fa fa-facebook" target="_blank"></a>
+        <a href="https://www.linkedin.com/in/adrian-storr-98773731/" class="icons fa fa-linkedin" target="_blank"></a>
+        <a href="https://github.com/AdrianStorr class="icons fa fa-github" target="_blank"></a>
+      </nav>
+    </div>
+      
+</footer>
 
 
                     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
